fix: fixed width search-input and visibility menu-button

--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,9 @@ template {
   }
   .navbar__search {
     margin-left: auto;
-    max-width: 340px;
+  }
+  .search__input {
+    width: 340px;
   }
 }
 @media screen and (max-width: 768px) {
@@ -445,6 +447,7 @@ template {
   .menu-button {
     width: 16px;
     height: 11px;
+    padding: 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
