--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -13,7 +13,9 @@
             padding: 22px 0 23px 0
         &__search
             margin-left: auto
-            max-width: 340px
+    .search
+        &__input
+            width: 340px
 @media screen and (max-width: 768px)
     .container
         max-width: 578px
@@ -25,6 +27,7 @@
         &-button
             width: 16px
             height: 11px
+            padding: 0
             display: flex
             align-items: center
             justify-content: space-between
